AWS/CloudFormation/Templates/Create-instance-with-all-dependencies.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Cloudformation Template To Create VPC, Subnetm SecurityGroup and Instance",
	"Parameters": {
	},
	"Mappings": {
		"EC2RegionMap": {
			"af-south-1": {
				"Ubuntu": "ami-07c76b7ba71f98b10"
			},
			"ap-east-1": {
				"Ubuntu": "ami-e5256594"
			},
			"sa-east-1": {
				"Ubuntu": "ami-0ddec8b41a3411374"
			},
			"me-south-1": {
				"Ubuntu": "ami-0054116010789ce83"
			},
			"eu-north-1": {
				"Ubuntu": "ami-094ac8f5eb69dd943"
			},
			"eu-west-3": {
				"Ubuntu": "ami-08eebff62e61110b7"
			},
			"eu-south-1": {
				"Ubuntu": "ami-08daaa3f87f350737"
			},
			"eu-west-2": {
				"Ubuntu": "ami-004c1e61ae5d76090"
			},
			"eu-west-1": {
				"Ubuntu": "ami-008320af74136c628"
			},
			"eu-central-1": {
				"Ubuntu": "ami-05ed2c1359acd8af6"
			},
			"ca-central-1": {
				"Ubuntu": "ami-0e2df0719252d4491"
			},
			"ap-northeast-1": {
				"Ubuntu": "ami-078648cce0d33c256"
			},
			"ap-southeast-2": {
				"Ubuntu": "ami-0e4bc04bd401729d6"
			},
			"ap-southeast-1": {
				"Ubuntu": "ami-05f112c29645f0812"
			},
			"ap-northeast-2": {
				"Ubuntu": "ami-0539a1389fedcbdc8"
			},
			"ap-south-1": {
				"Ubuntu": "ami-03b8a287edc0c1253"
			},
			"us-east-1": {
				"Ubuntu": "ami-0a0ddd875a1ea2c7f"
			},
			"us-east-2": {
				"Ubuntu": "ami-04781752c9b20ea41"
			},
			"us-west-1": {
				"Ubuntu": "ami-0c1e832407373333f"
			},
			"us-west-2": {
				"Ubuntu": "ami-0a4df59262c92cf19"
			}
		}
	},
	"Resources": {
		"NDVpc": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "172.31.0.0/16",
				"EnableDnsHostnames": "true",
				"EnableDnsSupport": "true",
				"Tags": [
					{
						"Key": "Name",
						"Value": "VPC-CreatedFromCFT"
					}
				]
			}
		},
		"InternetGateway":{
			"Type" : "AWS::EC2::InternetGateway",
			"Properties" : {
				"Tags": [
					{
						"Key": "Name",
						"Value": "IG-createdFromCFT"
					}
				]
			}	
		},
		"AttachGateway" : {
			"Type" : "AWS::EC2::VPCGatewayAttachment",
			"Properties" : {
				"VpcId" : { "Ref" : "NDVpc" },
				"InternetGatewayId" : { "Ref" : "InternetGateway" }
			}
		},
		"PublicRouteTable" : {
			"Type" : "AWS::EC2::RouteTable",
			"Properties" : {
				"VpcId" : { "Ref" : "NDVpc" }
			}
		},
		"addingroute" : {
			"Type" : "AWS::EC2::Route",
			"Properties" : {
				"RouteTableId" : { "Ref" : "PublicRouteTable" },
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId" : { "Ref" : "InternetGateway" }
			}
		},
		"NDSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": {
								"Ref": "AWS::Region"
							}
						}
					]
				},
				"CidrBlock": "172.31.0.0/24",
				"VpcId": {
					"Ref": "NDVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": "Subnet-A"
					}
				]
			}
		},
		"attachrouteTableTosubnet" : {
			"Type" : "AWS::EC2::SubnetRouteTableAssociation",
			"Properties" : {
				"RouteTableId" : { "Ref" : "PublicRouteTable" },
				"SubnetId": {
							"Ref": "NDSubnet"
						}
			}
		},
		"NDSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "My security group",
				"GroupName" : "SG-CreatedFromCFT",
				"VpcId": {
					"Ref": "NDVpc"
				}
			}
		},
		"SecurityGroupIngress": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"IpProtocol": "tcp",
				"FromPort": "22",
				"ToPort": "22",
				"CidrIp": "0.0.0.0/0",
				"GroupId": {
					"Ref": "NDSecurityGroup"
				}
			}
		},
		"SecurityGroupEgress": {
			"Type": "AWS::EC2::SecurityGroupEgress",
			"Properties": {
				"IpProtocol": "-1",
				"FromPort": "-1",
				"ToPort": "-1",
				"CidrIp": "0.0.0.0/0",
				"GroupId": {
					"Ref": "NDSecurityGroup"
				}
			}
		},
		"NDInstance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": "ubuntu/images/hvm-ssd/ubuntu-bionic-18.04-amd64-server-20200810",
				"InstanceType": "t2.micro",
				"KeyName": "donotdel-cft",
				"NetworkInterfaces": [
					{
						"AssociatePublicIpAddress": "true",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "NDSubnet"
						},
						"DeviceIndex": "0",
						"GroupSet": [
							{
								"Ref": "NDSecurityGroup"
							}
						]
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": "Instance-CreatedFromCFT"
					}
				]
			}
		}
	},
	"Outputs": {
		"InstancePublicDNS": {
			"Value": {
				"Fn::GetAtt": [
					"NDInstance",
					"PublicDnsName"
				]
			},
			"Description": "Public DNS Name of Instance"
		},
		"InstancePublicIp": {
			"Value": {
				"Fn::GetAtt": [
					"NDInstance",
					"PublicIp"
				]
			},
			"Description": "Public IP of Instance"
		},
		"InstancePrivateDNS": {
			"Value": {
				"Fn::GetAtt": [
					"NDInstance",
					"PrivateDnsName"
				]
			},
			"Description": "Private DNS Name of Instance"
		},
		"InstancePrivateIp": {
			"Value": {
				"Fn::GetAtt": [
					"NDInstance",
					"PrivateIp"
				]
			},
			"Description": "Private IP of Instance"
		}
	}
}
